feat: forgot password and log out
- using 6 digits to verify email for forgot password
- add log out to delete refresh token in cookies
